# language_listening_practice_app

./: .gitignore  Makefile  Procfile  README.md  manage.py  pyproject.toml  railway.toml  requirements.txt
language_listening_practice_app/: admin.py  asgi.py  models.py  settings.py  tests.py  urls.py  utils.py  views.py  wsgi.py
language_listening_practice_app/language_listening_practice_app/: urls.py
language_listening_practice_app/migrations/: 0001_initial.py  0002_exerciseattempt.py  0003_exerciseattempt_user.py  0004_exercise_explanation.py  0005_youtubeclip_title.py
language_listening_practice_app/templates/: all_done.html  base.html  exercise.html  exercise_detail.html  exercise_multiple_choice.html  exercise_shadow.html  exercise_transcribe.html  home.html  profile.html
language_listening_practice_app/templates/admin/: youtube_clip_create.html
language_listening_practice_app/templates/admin/language_listening_practice_app/youtubeclip/: change_list.html
language_listening_practice_app/templates/partials/: _exercise_header.html  _exercise_title.html  _multiple_choice.html  _shadow.html  _transcribe.html  _video_player.html
language_listening_practice_app/templates/registration/: login.html
