[project]
name = "language-listening-practice-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Patrick Canfield",email = "578371+patreeceeo@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "language_listening_practice_app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
