[project]
name = "language-listening-practice-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Patrick Canfield",email = "578371+patreeceeo@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "psycopg (>=3.2.10,<4.0.0)",
    "dj-database-url (>=2.3.0,<3.0.0)",
    "whitenoise (>=6.8.2,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
